mxslc/tests/data/error/out_param_1.mxsl
void sincos(float r, out float s = 3.0, out float c)
{
    s = sin(r);
    c = cos(r);
}

float s = 0.0;
float c = 0.0;
sincos(3.14, s, c);
float x = s + c;
